[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scenes/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scenes/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Scenes/Cow.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scenes/PlayerDetection.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 47.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 47 )

[sub_resource type="CircleShape2D" id=3]
radius = 305.236

[node name="Cow" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="CowState" type="Label" parent="."]
margin_left = -69.0
margin_top = -69.0
margin_right = 73.0
margin_bottom = -55.0
valign = 1

[node name="MilkedState" type="Label" parent="."]
margin_left = -73.0
margin_top = -90.0
margin_right = 69.0
margin_bottom = -76.0
valign = 1

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 1, 0.298039, 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 3 )]

[node name="PlayerDetection" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
shape = SubResource( 3 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 15.0

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]

[node name="PathfindingUpdate" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]
[editable path="PlayerDetection"]
